# raytracer

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  camera.h  color.h  compile_commands.json  compiledCode  hittable.h  hittable_list.h  image.exr  image.ppm  image2.ppm  interval.h  main.cpp  material.h  sphere.h  vec3.h
.cache/clangd/index/: atomic.h.0238DA8908D749E5.idx  attrdelegate.h.8172E0D6C260E6C5.idx  base.h.0BA7B8BAFB82F25E.idx  camera.h.EB2DFFC37A0603C1.idx  check.h.D45525C955B5A62E.idx  chrono.h.56F56D16DB72F82A.idx  color.h.D13862C70251FF27.idx  dassert.h.85F4B369D776F7C3.idx  error.cpp.9716F97C5D175FA1.idx  error.hpp.2EA4035D892520BC.idx  export.h.CF88A1CDE99326C5.idx  farmhash.h.8DFC9CFA94A1C6D3.idx  fmt.h.D992A351EBCDC4B0.idx  format-inl.h.62137FCAE0DA137F.idx  format.h.AB606F5F16ED3ECD.idx  hash.h.62D80F49E155A207.idx  hittable.h.47007149705B29C6.idx  (+44 more)
notes/: Notes on Rendering (and Raytracing).md
notes/.obsidian/: workspace.json
notes/Probability/: Canonical Uniform Random Variable.md  Importance Sampling.md  Inversion Transform Sampling.md  Monte Carlo Integration.md  Probability Review.md  Russian Roulette.md  Splitting.md  Stratified Sampling.md  Transforming between Distributions.md
notes/linear algebra/: Linear Interpolation.md  Vectors.md
notes/physics/: Light.md  Ray.md
notes/rendering/: Camera.md  Indirect light transport.md  Light scattering at surfaces.md  Light sources.md  Ray propagation.md  Raytracing.md  Ray–object intersections.md  Visibility.md  bidirectional reflectance distribution function.md  rendering equation.md
source/: Makefile  camera.h  color.h  compile_commands.json  hittable.h  hittable_list.h  integrations.cpp  integrations.hpp  interval.h  main.cpp  main.h  material.h  ray.h  ray.hpp  raytracer  raytracer.hpp  scene.hpp  sphere.h  timing.h  vec3.h  worlds.cpp  worlds.hpp
source/render/: render.cpp
source/test/: transform_test.cpp  vecmath_test.cpp
source/util/: check.h  error.cpp  error.hpp  log.cpp  log.hpp  math.hpp  profiler.cpp  profiler.hpp  random.hpp  timing.hpp  transform.cpp  transform.hpp  vecmath.hpp  vecmath_test.cpp
source/worlds/: manyballs.cpp
src/: color.h  compile_commands.json  interval.h  main.cpp  material.h  options.hpp  raytracer.cpp  raytracer.hpp  scene.hpp  sphere.h
src/render/: render.cpp  render.hpp
src/util/: error.cpp  error.hpp  log.cpp  log.hpp  math.hpp  profiler.hpp  random.hpp  timing.hpp  vecmath.hpp
src/worlds/: manyballs.cpp  worlds.hpp
test/: transform_test.cpp  vecmath_test.cpp
(+80 files in other folders)
